# can_plugins2_porting

./: CMakeLists.txt  README.md  nodelet_description.xml  package.xml
include/: can_utils.hpp  test.hpp
launch/: slcan.launch
src/: slcan_bridge.cpp
udev/: 60-usbcan.rules
